--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <img src="https://placeholder.com/800x400?text=Poás+Volcano" 
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" width="640" height="480"
+      allow="autoplay" loading="lazy"></iframe>
                  alt="Poás Volcano crater view" 
                  class="volcano-image">
             <div class="volcano-content">
@@ -130,14 +131,24 @@
                     <li>Botts' Dots tactile road system</li>
                 </ul>
 
-                <div class="visitor-tips">
-                    <h3>Visitor Tips</h3>
-                    <ul>
-                        <li>Arrive before 10am for best visibility</li>
-                        <li>Mandatory gas masks provided</li>
-                        <li>UV protection essential</li>
-                    </ul>
-                </div>
+<!-- Inside the Poás Volcano card's visitor tips section -->
+<div class="visitor-tips">
+    <h3>Visitor Tips</h3>
+    <ul>
+        <li>Arrive before 10am for best visibility</li>
+        <li>Mandatory gas masks provided</li>
+        <li>UV protection essential</li>
+        <li>
+            🗺️ 
+            <a href="https://www.waze.com/es/live-map/directions/parque-nacional-volcan-poas-parqueo-volcan-poas,-san-juan,-poas?to=place.w.180748390.1807221754.584548"
+               target="_blank"
+               rel="noopener noreferrer"
+               class="waze-link">
+                Open in Waze
+            </a>
+        </li>
+    </ul>
+</div>
             </div>
         </div>
 
