--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" width="640" height="480"
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" width="640" height="400"
       allow="autoplay" loading="lazy"></iframe>
                  alt="Poás Volcano crater view" 
                  class="volcano-image">
@@ -116,7 +116,7 @@
                     </div>
                     <div class="fact-item">
                         <span class="fact-label">Last Eruption:</span>
-                        <span>2023</span>
+                        <span>January 2025</span>
                     </div>
                     <div class="fact-item">
                         <span class="fact-label">Distance from SJ:</span>
