--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
         <!-- Poás Volcano -->
         <div class="volcano-card">
             <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" width="640" height="400"
-      allow="autoplay" loading="lazy"></iframe>
+      allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
-                 class="volcano-image">
+                 class="volcano-image"></iframe>
             <div class="volcano-content">
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
@@ -154,9 +154,10 @@
 
         <!-- Arenal Volcano -->
         <div class="volcano-card">
-            <img src="https://placeholder.com/800x400?text=Arenal+Volcano" 
+            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6/preview" width="640" height="400"
+      allow="autoplay" loading="lazy"
                  alt="Arenal Volcano landscape" 
-                 class="volcano-image">
+                 class="volcano-image"></iframe> 
             <div class="volcano-content">
                 <h2 class="volcano-title">Arenal Volcano</h2>
                 <div class="status-badge dormant">Currently Dormant</div>
