--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" width="640" height="400"
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
                  class="volcano-image"></iframe>
@@ -154,7 +154,7 @@
 
         <!-- Arenal Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6/preview" width="640" height="400"
+            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6"
       allow="autoplay" loading="lazy"
                  alt="Arenal Volcano landscape" 
                  class="volcano-image"></iframe> 
