--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 
         <!-- Arenal Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6"
+            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6/view?usp="
       allow="autoplay" loading="lazy"
                  alt="Arenal Volcano landscape" 
                  class="volcano-image"></iframe> 
