--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
+             <img src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/edit" alt="Description of the image">
             <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/edit" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
