--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-             <img src="https://drive.google.com/file/d/16L9lsHE-UedYrO3W9bYaOaQdrQ2TYXU0/view" allow="autoplay" loading="lazy" alt="Description of the image">
-            <iframe src="https://drive.google.com/file/d/16L9lsHE-UedYrO3W9bYaOaQdrQ2TYXU0/view" 
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/view?usp=sharing" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
                  class="volcano-image"></iframe>
