--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" 
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d.jpg" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
                  class="volcano-image"></iframe>
