--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <img src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d.jpg" 
+            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
                  class="volcano-image"></iframe>
@@ -197,7 +197,7 @@
 
         <!-- Irazú Volcano -->
         <div class="volcano-card">
-            <img src="https://placeholder.com/800x400?text=Irazú+Volcano" 
+            <iframe src="https://drive.google.com/file/d/14gdEMTtPJtYAg8K1FD70-d4WvQOBVWdL/preview" allow="autoplay" loading="lazy"
                  alt="Irazú Volcano lunar landscape" 
                  class="volcano-image">
             <div class="volcano-content">
@@ -239,7 +239,7 @@
 
         <!-- Turrialba Volcano -->
         <div class="volcano-card">
-            <img src="https://placeholder.com/800x400?text=Turrialba+Volcano" 
+            <iframe src="https://drive.google.com/file/d/1vw-KSzqsad6eZlCjwc80xF09Cn09yeNu/preview" 
                  alt="Turrialba Volcano eruption" 
                  class="volcano-image">
             <div class="volcano-content">
