--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <div class="volcano-card">
             <iframe src="https://drive.google.com/file/d/14gdEMTtPJtYAg8K1FD70-d4WvQOBVWdL/preview" allow="autoplay" loading="lazy"
                  alt="Irazú Volcano lunar landscape" 
-                 class="volcano-image">
+                 class="volcano-image"></iframe>
             <div class="volcano-content">
                 <h2 class="volcano-title">Irazú Volcano</h2>
                 <div class="status-badge dormant">Dormant</div>
@@ -241,7 +241,7 @@
         <div class="volcano-card">
             <iframe src="https://drive.google.com/file/d/1vw-KSzqsad6eZlCjwc80xF09Cn09yeNu/preview" 
                  alt="Turrialba Volcano eruption" 
-                 class="volcano-image">
+                 class="volcano-image"></iframe>
             <div class="volcano-content">
                 <h2 class="volcano-title">Turrialba Volcano</h2>
                 <div class="status-badge active">Active</div>
