--- a/index.html
+++ b/index.html
@@ -101,6 +101,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
+            <img src="https://drive.google.com/uc?export=view&id=1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" alt="Image Description">
             <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" 
       allow="autoplay" loading="lazy"
                  alt="Poás Volcano crater view" 
