--- a/index.html
+++ b/index.html
@@ -279,6 +279,60 @@
                 </div>
             </div>
         </div>
+
+            <img src="https://placeholder.com/800x400?text=Barva+Misty+Campgrounds" 
+         alt="Mountain camping under ancient oak trees" 
+         class="volcano-image">
+    <div class="volcano-content">
+        <h2 class="volcano-title">Barva Volcano</h2>
+        <div class="status-badge wilderness">Wilderness Expedition</div>
+        
+        <div class="volcano-facts">
+            <div class="fact-item">
+                <span class="fact-label">Elevation:</span>
+                <span>2,906m (High-Altitude Camping)</span>
+            </div>
+            <div class="fact-item">
+                <span class="fact-label">Night Temp:</span>
+                <span>3-8°C (37-46°F)</span>
+            </div>
+            <div class="fact-item">
+                <span class="fact-label">Trail Type:</span>
+                <span>Expert-Level 4x4 + Hike</span>
+            </div>
+        </div>
+
+        <h3>Key Features</h3>
+        <ul>
+            <li>🌌 Designated wilderness camping zones</li>
+            <li>🥾 18km network of primal trails</li>
+            <li>❄️ Year-round cold climate (pack thermals!)</li>
+        </ul>
+
+        <div class="visitor-tips">
+            <h3>Adventure Essentials</h3>
+            <ul>
+                <li>⛺ Campfire permits available at ranger station</li>
+                <li>🧤 Required gear: 4-season tent, -10°C sleeping bag</li>
+                <li>🌧️ Waterproof everything - constant mist showers</li>
+            </ul>
+        </div>
+
+<div class="local-eats">
+    <h4>🫕 Fuel Up at Soda La Casona del Maíz</h4>
+    <p>Local favorite for:</p>
+    <ul>
+        <li>☕ Pre-hike "Desayuno Montañero" (Mountain Breakfast)</li>
+        <li>🥘 Post-hike "Olla de Carne" healing stew</li>
+        <li>🍫 House-made chocolate drinks</li>
+    </ul>
+    <a href="https://www.waze.com/es/live-map/directions/cr/heredia/barva/el-maicero?to=place.ChIJ2XnMlrT7oI8RCHCy8DS9Gvk" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="waze-link">
+        🚗 Get Directions via Waze (5km from trailhead)
+    </a>
+</div>
     </div>
 </body>
 </html>
