--- a/index.html
+++ b/index.html
@@ -280,10 +280,10 @@
             </div>
         </div>
 
-            <img src="https://placeholder.com/800x400?text=Barva+Misty+Campgrounds" 
+            <iframe src="https://drive.google.com/file/d/1I5pDtvd7C4hg_bz_lcSwQFcn3k2hJycF/preview" 
          alt="Mountain camping under ancient oak trees" 
          class="volcano-image">
-    <div class="volcano-content">
+    <div class="volcano-content"></iframe>
         <h2 class="volcano-title">Barva Volcano</h2>
         <div class="status-badge wilderness">Wilderness Expedition</div>
         
