--- a/index.html
+++ b/index.html
@@ -148,6 +148,15 @@
                 Open in Waze
             </a>
         </li>
+        <div class="official-info">
+    <h4>ℹ️ Official Information</h4>
+    <a href="https://costarica.org/volcanoes/poas/" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+        Learn More at CostaRica.org
+    </a>
+</div>
     </ul>
 </div>
             </div>
