--- a/index.html
+++ b/index.html
@@ -148,7 +148,9 @@
                 Open in Waze
             </a>
         </li>
-        <div class="official-info">
+
+    </ul>
+    <div class="official-info">
     <h4>ℹ️ Official Information</h4>
     <a href="https://costarica.org/volcanoes/poas/" 
        target="_blank" 
@@ -157,7 +159,6 @@
         Learn More at CostaRica.org
     </a>
 </div>
-    </ul>
 </div>
             </div>
         </div>
@@ -201,6 +202,15 @@
                         <li>Combine with Lake Arenal visit</li>
                         <li>Waterproof gear recommended</li>
                     </ul>
+                            <div class="official-info">
+    <h4>ℹ️ Official Information</h4>
+    <a href="https://costarica.org/volcanoes/arenal/" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+        Learn More at CostaRica.org
+    </a>
+</div>
                 </div>
             </div>
         </div>
