--- a/index.html
+++ b/index.html
@@ -254,6 +254,15 @@
                         <li>Combine with Cartago city tour</li>
                     </ul>
                 </div>
+    <div class="official-info">
+    <h4>ℹ️ Official Information</h4>
+    <a href="https://costarica.org/volcanoes/irazu/" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+        Learn More at CostaRica.org
+    </a>
+</div>                
             </div>
         </div>
 
@@ -296,6 +305,15 @@
                         <li>Combine with Pacuare River rafting</li>
                     </ul>
                 </div>
+    <div class="official-info">
+    <h4>ℹ️ Official Information</h4>
+    <a href="https://costarica.org/volcanoes/turrialba/" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+        Learn More at CostaRica.org
+    </a>
+</div>
             </div>
         </div>
 
@@ -352,6 +370,15 @@
         🚗 Get Directions via Waze (5km from trailhead)
     </a>
 </div>
+    <div class="official-info">
+    <h4>ℹ️ Official Information</h4>
+    <a href="https://www.sinac.go.cr/EN-US/ac/accvc/bcnp/Pages/default.aspx" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+        Learn More at CostaRica.org
+    </a>
+        
     </div>
 </body>
 </html>
