--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <ul>
                             <li>Public tennis courts</li>
                             <li>Jogging trails (5km loop)</li>
-                            <li>Dragon boat rentals</li>
+                            <li>Frequent festivals and concerts</li>
                         </ul>
                     </div>
                     
