--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                     <div class="activity">
                         <h4>🌿 Nature</h4>
                         <ul>
-                            <li>Birdwatching (50+ species)</li>
-                            <li>Butterfly garden</li>
-                            <li>Meditation zones</li>
+                            <li>Many sports activities</li>
+                            <li>National Stadium</li>
+                            <li>The lung of the city</li>
                         </ul>
                     </div>
                 </div>
@@ -63,8 +63,8 @@
                 <div class="visitor-info">
                     <h4>Insider Tips</h4>
                     <ul>
-                        <li>🚴 Rent bikes at "La Casa Ciclista"</li>
-                        <li>🍱 Try "Gallo Pinto" at park kiosks</li>
+                        <li> Many flowering  trees depending on season. </li>
+                        <li>🍱 Try "Gallo Pinto" at surrounding restaurants</li>
                         <li>🌅 Best light for photos: 5-6 PM</li>
                     </ul>
                 </div>
