--- a/index.html
+++ b/index.html
@@ -450,10 +450,11 @@
 
         <!-- Arenal Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6/preview"
-      allow="autoplay" loading="lazy"
+
+            <img src="https://lh3.googleusercontent.com/d/1XXi4vUTGkTDZ0jqPCO-hO9oM54lj-Jy6" 
                  alt="Arenal Volcano landscape" 
-                 class="volcano-image"></iframe> 
+                 class="volcano-image">
+            
             <div class="volcano-content">
                 <h2 class="volcano-title">Arenal Volcano</h2>
                 <div class="status-badge dormant">Currently Dormant</div>
