Update volcano images

--- a/index.html
+++ b/index.html
@@ -386,12 +386,7 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <!-- img src="https://drive.google.com/uc?export=view&id=1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" alt="Image Description"-->
-            <iframe src="https://drive.google.com/file/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d/preview" 
-      allow="autoplay" loading="lazy"
-                 alt="Poás Volcano crater view" 
-                 class="volcano-image"></iframe>
-            <div class="volcano-content">
+            <-- img src="https://lh3.googleusercontent.com/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" alt="Poas Volcano Crater View"-->
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
                 
@@ -503,9 +498,9 @@
 
         <!-- Irazú Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/14gdEMTtPJtYAg8K1FD70-d4WvQOBVWdL/preview" allow="autoplay" loading="lazy"
-                 alt="Irazú Volcano lunar landscape" 
-                 class="volcano-image"></iframe>
+            <img src="https://lh3.googleusercontent.com/d/14gdEMTtPJtYAg8K1FD70-d4WvQOBVWdL" 
+                 alt="Irazu volcano lunar landscape" loading="lazy"
+                 class="volcano-image">
             <div class="volcano-content">
                 <h2 class="volcano-title">Irazú Volcano</h2>
                 <div class="status-badge dormant">Dormant</div>
@@ -554,9 +549,9 @@
 
         <!-- Turrialba Volcano -->
         <div class="volcano-card">
-            <iframe src="https://drive.google.com/file/d/1vw-KSzqsad6eZlCjwc80xF09Cn09yeNu/preview" 
-                 alt="Turrialba Volcano eruption" 
-                 class="volcano-image"></iframe>
+            <img src="https://lh3.googleusercontent.com/d/1vw-KSzqsad6eZlCjwc80xF09Cn09yeNu" 
+                 alt="Turrialba Volcano eruption" loading="lazy"
+                 class="volcano-image">
             <div class="volcano-content">
                 <h2 class="volcano-title">Turrialba Volcano</h2>
                 <div class="status-badge active">Active</div>
@@ -603,9 +598,9 @@
             </div>
         </div>
 
-            <iframe src="https://drive.google.com/file/d/1I5pDtvd7C4hg_bz_lcSwQFcn3k2hJycF/preview" 
-         alt="Mountain camping under ancient oak trees" 
-         class="volcano-image">
+            <img src="https://lh3.googleusercontent.com/d/1I5pDtvd7C4hg_bz_lcSwQFcn3k2hJycF" 
+                 alt="Turrialba Volcano eruption" loading="lazy"
+                 class="Barva Volcano">
     <div class="volcano-content"></iframe>
         <h2 class="volcano-title">Barva Volcano</h2>
         <div class="status-badge wilderness">Wilderness Expedition</div>
