--- a/index.html
+++ b/index.html
@@ -386,7 +386,10 @@
     <div class="volcano-container">
         <!-- Poás Volcano -->
         <div class="volcano-card">
-            <-- img src="https://lh3.googleusercontent.com/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" alt="Poas Volcano Crater View"-->
+            <img src="https://lh3.googleusercontent.com/d/1NbosPjFICo2n-iz1kYyiYx9fXln3fk4d" 
+                alt="Poas Volcano Crater View"
+                loading="lazy"
+                class="volcano-image">
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
                 
