--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 
         .volcano-image {
             width: 100%;
-            height: 450px;
+            height: auto;
             object-fit: cover;
             border-bottom: 4px solid #2c5f2d;
         }
