--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
 
             <img src="https://lh3.googleusercontent.com/d/1I5pDtvd7C4hg_bz_lcSwQFcn3k2hJycF" 
                  alt="Turrialba Volcano eruption" loading="lazy"
-                 class="Barva Volcano">
+                 class="volcano-image">
     <div class="volcano-content"></iframe>
         <h2 class="volcano-title">Barva Volcano</h2>
         <div class="status-badge wilderness">Wilderness Expedition</div>
