add 360 embeded image of poas

--- a/index.html
+++ b/index.html
@@ -390,6 +390,7 @@
                 alt="Poas Volcano Crater View"
                 loading="lazy"
                 class="volcano-image">
+                <iframe src="https://360.cr/pnvolcanpoas/" class="volcano-image"></iframe>
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
                 
@@ -619,7 +620,7 @@
             </div>
             <div class="fact-item">
                 <span class="fact-label">Trail Type:</span>
-                <span>Expert-Level 4x4 + Hike</span>
+                <span>Recommended 4x4 and then Hike</span>
             </div>
         </div>
 
