--- a/index.html
+++ b/index.html
@@ -323,6 +323,13 @@
             border-bottom: 4px solid #2c5f2d;
         }
 
+        .image-360 {
+            width: 100%;
+            height: 1/1;
+            object-fit: cover;
+            border-bottom: 4px solid #2c5f2d;
+        }
+
         .volcano-content {
             padding: 25px;
         }
@@ -390,7 +397,7 @@
                 alt="Poas Volcano Crater View"
                 loading="lazy"
                 class="volcano-image">
-                <iframe src="https://360.cr/pnvolcanpoas/" class="volcano-image"></iframe>
+                <iframe src="https://360.cr/pnvolcanpoas/" class="image-360"></iframe>
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
                 
