add link to 360 poas

--- a/index.html
+++ b/index.html
@@ -323,13 +323,6 @@
             border-bottom: 4px solid #2c5f2d;
         }
 
-        .image-360 {
-            width: 100%;
-            height: 1/1;
-            object-fit: cover;
-            border-bottom: 4px solid #2c5f2d;
-        }
-
         .volcano-content {
             padding: 25px;
         }
@@ -397,7 +390,8 @@
                 alt="Poas Volcano Crater View"
                 loading="lazy"
                 class="volcano-image">
-                <iframe src="https://360.cr/pnvolcanpoas/" class="image-360"></iframe>
+                <a href="https://360.cr/pnvolcanpoas/" title="Poas Volcano 360 View"></a>
+
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
                 
