--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
                 alt="Poas Volcano Crater View"
                 loading="lazy"
                 class="volcano-image">
-                <a href="https://360.cr/pnvolcanpoas/" title="Poas Volcano 360 View">Poas Volcano 360 View</a>
+                <a href="https://360.cr/pnvolcanpoas/" class="volcano-title" title="Poas Volcano 360 View">Poas Volcano 360 View</a>
 
                 <h2 class="volcano-title">Poás Volcano</h2>
                 <div class="status-badge active">Currently Active</div>
