Update map link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -23,13 +24,13 @@
     <h1>Costa Rica Hihglights </h1>
     <div class="map-responsive"></div>
         <iframe 
-            src="https://www.google.com/maps/d/edit?mid=1S6IO_ZWglcRrR4-VIYug4BPFGgn4luA&ll=9.885628679873783%2C-84.05397775159241&z=9" 
+            src="https://www.google.com/maps/d/edit?mid=1S6IO_ZWglcRrR4-VIYug4BPFGgn4luA&usp=sharing" 
             allowfullscreen="" 
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </div>
-
+</style>
 
 <section class="attractions">
     <div class="container">
