Fix Soda Maicero description

--- a/index.html
+++ b/index.html
@@ -660,12 +660,12 @@
         </div>
 
 <div class="local-eats">
-    <h4>🫕 Fuel Up at Soda La Casona del Maíz</h4>
+    <h4>🫕 Fuel Up at Soda El Maicero in Barva town</h4>
     <p>Local favorite for:</p>
     <ul>
         <li>☕ Pre-hike "Desayuno Montañero" (Mountain Breakfast)</li>
-        <li>🥘 Post-hike "Olla de Carne" healing stew</li>
-        <li>🍫 House-made chocolate drinks</li>
+        <li>🥘 Post-hike "Olla de Carne" recover stew</li>
+        <li>🍫 House-made drinks, try the "Resbaladera"</li>
     </ul>
     <a href="https://www.waze.com/es/live-map/directions/cr/heredia/barva/el-maicero?to=place.ChIJ2XnMlrT7oI8RCHCy8DS9Gvk" 
        target="_blank" 
