Update links at the end

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <h1>Costa Rica Highlights </h1>
 
-    <h2 href="https://www.google.com/maps/d/embed?mid=1S6IO_ZWglcRrR4-VIYug4BPFGgn4luA&hl=en&ehbc=2E312F" width="640" height="480"></iframe>" 
-        class="info-link" 
-        target="_blank">
-        Costa Rica Map Highlights ↗
-    </h2>
 </style>
 
 <section class="attractions">
@@ -673,7 +668,25 @@
        target="_blank" 
        rel="noopener noreferrer"
        class="info-link">
-        Learn More at CostaRica.org
+       SINAC Official Costa Rica National Parks web to buy tickets online.
+    </a>
+    <a href="www.costarica.org" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+       CostaRica.org
+    </a>
+    <a href="https://www.ict.go.cr/en/" 
+       target="_blank" 
+       rel="noopener noreferrer"
+       class="info-link">
+       Instituto Costarricense de Turismo (ICT) 
+    </a>
+
+    <a href="https://www.google.com/maps/d/embed?mid=1S6IO_ZWglcRrR4-VIYug4BPFGgn4luA&hl=en&ehbc=2E312F" width="640" height="480"></iframe>" 
+        class="info-link" 
+        target="_blank">
+        Costa Rica Map Highlights ↗
     </a>
         
     </div>
