Fix URL costarica.org

--- a/index.html
+++ b/index.html
@@ -662,7 +662,7 @@
         🚗 Get Directions via Waze (5km from trailhead)
     </a>
 </div>
-    <div class="official-info">
+<div class="official-info">
     <h4>ℹ️ Official Information</h4>
     <a href="https://www.sinac.go.cr/EN-US/ac/accvc/bcnp/Pages/default.aspx" 
        target="_blank" 
@@ -674,7 +674,7 @@
        target="_blank" 
        rel="noopener noreferrer"
        class="info-link">
-       CostaRica.org
+       www.costarica.org
     </a>
     <a href="https://www.ict.go.cr/en/" 
        target="_blank" 
@@ -690,11 +690,7 @@
     </a>
         
     </div>
-
-
-
-        <!-- Additional attraction cards can be added -->
-    </div>
+</div>
 </section>
 
 <style>
